# herd

./: .gitignore  Cargo.toml  clippy.toml  deny.toml  herd.toml.example  rustfmt.toml  solo.toml.example
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  security.yml
crates/herd-app/: Cargo.toml
crates/herd-app/src/: app.rs  main.rs  terminal_widget.rs
crates/herd-config/: Cargo.toml
crates/herd-config/src/: config.rs  detect.rs  env_resolver.rs  lib.rs  local_config.rs  trust.rs
crates/herd-core/: Cargo.toml
crates/herd-core/src/: lib.rs  orphan.rs  process.rs  pty.rs  supervisor.rs  watcher.rs
crates/herd-mcp/: Cargo.toml
crates/herd-mcp/src/: lib.rs  resources.rs  server.rs  tools.rs
crates/herd-notify/: Cargo.toml
crates/herd-notify/src/: lib.rs
crates/herd-terminal/: Cargo.toml
crates/herd-terminal/proptest-regressions/: sanitizer.txt
crates/herd-terminal/src/: grid_adapter.rs  lib.rs  palette.rs  sanitizer.rs
crates/soloterm-app/: Cargo.toml
crates/soloterm-app/src/: app.rs  main.rs
crates/soloterm-config/: Cargo.toml
crates/soloterm-config/src/: detect.rs  env_resolver.rs  lib.rs  local_config.rs  solo_config.rs  trust.rs
crates/soloterm-core/: Cargo.toml
crates/soloterm-core/src/: orphan.rs  process.rs  pty.rs  supervisor.rs  watcher.rs
crates/soloterm-mcp/: Cargo.toml
crates/soloterm-mcp/src/: resources.rs  server.rs  tools.rs
crates/soloterm-notify/: Cargo.toml
crates/soloterm-notify/src/: lib.rs
crates/soloterm-terminal/: Cargo.toml
crates/soloterm-terminal/src/: grid_adapter.rs  sanitizer.rs
