[workspace]
resolver = "2"
members = [
    "crates/herd-app",
    "crates/herd-core",
    "crates/herd-terminal",
    "crates/herd-mcp",
    "crates/herd-config",
    "crates/herd-notify",
]

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/accubotai/herd"

[workspace.dependencies]
# Internal crates
herd-core = { path = "crates/herd-core" }
herd-terminal = { path = "crates/herd-terminal" }
herd-config = { path = "crates/herd-config" }
herd-mcp = { path = "crates/herd-mcp" }
herd-notify = { path = "crates/herd-notify" }

# Terminal emulation
alacritty_terminal = "0.25"
vte = "0.15"

# GPU rendering
wgpu = "24"

# UI framework
iced = { version = "0.13", features = ["wgpu", "tokio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Process management (Unix)
nix = { version = "0.29", features = ["process", "signal", "term", "fs"] }
rustix = { version = "1.0", features = ["std", "termios", "process"] }

# File watching
notify = "8"

# Desktop notifications
notify-rust = "4"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
sha2 = "0.10"

# Misc
parking_lot = "0.12"
unicode-width = "0.2"
dirs = "6"
regex = "1"

# Testing
proptest = "1"
tempfile = "3"

# ── Workspace-wide lint configuration ──
[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
unused_imports = "warn"
dead_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }
# Suspicious code
suspicious = { level = "warn", priority = -1 }
# Style enforcement
style = { level = "warn", priority = -1 }
# Complexity reduction
complexity = { level = "warn", priority = -1 }
# Performance suggestions
perf = { level = "warn", priority = -1 }
# Pedantic (opinionated but useful)
pedantic = { level = "warn", priority = -1 }

# Specific pedantic overrides (too noisy or conflicts with our style)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Additional strict lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
wildcard_imports = "warn"
redundant_closure_for_method_calls = "warn"
manual_string_new = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
needless_pass_by_value = "warn"

[profile.release]
lto = "thin"
strip = true
