[package]
name = "herd-core"
version = "0.1.0"
description = "Process supervision and PTY management for Herd"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
herd-config = { workspace = true }
alacritty_terminal = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
