[package]
name = "herd-mcp"
version = "0.1.0"
description = "MCP server exposing Herd workspace to AI agents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
