[package]
name = "soloterm-mcp"
version = "0.1.0"
description = "MCP server exposing SoloTerm workspace to AI agents"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
[lints]
workspace = true


[dependencies]
soloterm-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
