[package]
name = "soloterm-notify"
version = "0.1.0"
description = "Desktop notification abstraction for SoloTerm"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
[lints]
workspace = true


[dependencies]
notify-rust = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
